--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,3 +52,26 @@ jobs:
 
       - name: Run Tests with Gradle
         run: ./gradlew test
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.13.0
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
+
+      - name: Grant execute permissions for gradlew
+        run: chmod +x ./gradlew
+      - name: Run Lint with Gradle
+        run: ./gradlew lint
+      - name: Upload lint results
+        uses: actions/upload-artifact@v2
+        with:
+          name: lint-results
+          path: app/build/reports/lint-results.xml
