--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -74,4 +74,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lint-results
-          path: app/build/reports/lint-results.xml
+          path: '**/build/reports/lint-results-*.xml'
