--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -74,4 +74,29 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: lint-results
-          path: '**/build/reports/lint-results-*.xml'
+          path: '**/build/reports/lint-results-*.html'
+
+  dokka:
+    runs-on: ubuntu-latest
+    needs: [ build, test ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3.13.0
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
+
+      - name: Grant execute permissions for gradlew
+        run: chmod +x ./gradlew
+      - name: Run Dokka with Gradle
+        run: ./gradlew dokkaHtmlMultiModule
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: build/dokka/htmlMultiModule
