--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch: # allows manual triggering
+
 
 concurrency:
   group: build-${{ github.ref }}
@@ -23,6 +25,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
+
+      - name: decode and write google service json
+        env: 
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -47,6 +54,11 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
+      - name: decode and write google service json
+        env: 
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
+
       - name: Grant execute permissions for gradlew
         run: chmod +x ./gradlew
 
@@ -65,6 +77,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
+
+      - name: decode and write google service json
+        env: 
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
 
       - name: Grant execute permissions for gradlew
         run: chmod +x ./gradlew
@@ -89,6 +106,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
+
+      - name: decode and write google service json
+        env: 
+            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
 
       - name: Grant execute permissions for gradlew
         run: chmod +x ./gradlew
