--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -64,6 +64,10 @@ jobs:
           fetch-depth: 1
           ref: ${{ github.head_ref }}
 
+      - name: detect-secrets
+        uses: reviewdog/action-detect-secrets@master
+        with:
+            reporter: github-pr-review
       - name: detekt
         uses: alaegin/Detekt-Action@v1.23.6
         with:
