--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,6 +24,7 @@ jobs:
         uses: alaegin/Detekt-Action@v1.23.6
         with:
           reviewdog_reporter: github-pr-review
+          fail_on_error: true
           github_token: ${{ secrets.github_token }}
           detekt_config: config/detekt-config.yml
 
