--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,24 +19,8 @@ jobs:
           fetch-depth: 1
           ref: ${{ github.head_ref }}
 
-      - name: Install Review Dog
-        uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
-
-      - name: Grant execute permissions for gradlew
-        run: chmod +x ./gradlew
-      - name: Run Detekt with Review Dog
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.github_token }}
-        run: |
-          ./gradlew detekt 2>&1 | grep '.*' | sed 's/^/e: /g' | reviewdog \
-              -name="Detekt" \
-              -reporter=github-pr-review \
-              -efm="%f:%l:%c:%t: %m" \
-              -level=error \
-              -filter-mode=nofilter \
-              -fail-on-error
+      - name: Run Detekt
+        run: chmod +x ./gradlew && ./gradlew detekt --info
 
   check:
     needs: detekt
