--- a/config/detekt-config.yml
+++ b/config/detekt-config.yml
@@ -124,7 +124,7 @@ complexity:
     active: false
     threshold: 6
   NamedArguments:
-    active: false
+    active: true
     threshold: 3
   NestedBlockDepth:
     active: true
@@ -400,12 +400,14 @@ formatting:
   StringTemplate:
     active: true
     autoCorrect: true
+  TrailingCommaOnDeclarationSite:
+    active: true
+    autoCorrect: true
 
 naming:
   active: true
   BooleanPropertyNaming:
     active: false
-    excludes: ['**/test/**', '**/androidTest/**']
     allowedPattern: '^(is|has|are)'
   ClassNaming:
     active: true
@@ -666,6 +668,8 @@ style:
     active: true
   NoTabs:
     active: false
+  NullableBooleanCheck:
+    active: true
   ObjectLiteralToLambda:
     active: false
   OptionalAbstractKeyword:
