--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  detekt:
+  lint:
     name: Detekt review
     runs-on: ubuntu-latest
 
@@ -29,7 +29,7 @@ jobs:
 
   check:
     name: Build and test
-    needs: detekt
+    needs: [lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
