--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,12 +29,10 @@ jobs:
       - name: detekt-evaluate
         if: always()  # Ensure this runs even if the previous step fails
         run: |
-          # Check if the Detekt log contains the word "failed"
-          if grep -q "Analysis failed" <(tail -n 1000 /dev/stdout); then
-            echo "Detekt found issues" >&2
+          if grep -qE "(Analysis failed|conclusion=failure)" <(echo "$GITHUB_JOB_LOG"); then
+            echo "Detekt analysis failed" >&2
             exit 1
           fi
-        shell: bash
 
   check:
     name: Build and test
