--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,6 +42,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
 
+      # CodeQL init should happen before project build!
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: java-kotlin
+          build-mode: manual
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
@@ -52,13 +59,7 @@ jobs:
       - name: Build and test
         run: chmod +x ./gradlew && ./gradlew build
 
-      # CodeQL needs project build!
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: java-kotlin
-          build-mode: manual
-
+      # CodeQL analysis needs project build!
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
