--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           fetch-depth: 1
           ref: ${{ github.head_ref }}
-
       - name: Detekt PR Check
         uses: alaegin/Detekt-Action@v1.23.6
         with:
@@ -27,10 +26,9 @@ jobs:
           fail_on_error: true
           detekt_config: internal/detekt-config.yml
 
-  check:
+  buildtestanalyze:
     name: Build, test and analyze
     runs-on: ubuntu-latest
-    needs: detekt
     timeout-minutes: 120
     permissions: # needed for CodeQL steps
       security-events: write
@@ -41,26 +39,27 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
-
-      # CodeQL init should happen before project build!
-      - name: Initialize CodeQL
+      - name: Initialize CodeQL # CodeQL init should happen before project build!
         uses: github/codeql-action/init@v3
         with:
           languages: java-kotlin
           build-mode: manual
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
-
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Build and test
-        run: chmod +x ./gradlew && ./gradlew build
-
-      # CodeQL analysis needs project build!
-      - name: Perform CodeQL Analysis
+        run: ./gradlew build
+      - name: Perform CodeQL Analysis # CodeQL analysis needs project build!
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java-kotlin"
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: app
+          path: app/build/outputs/apk/
