--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  buildtestanalyze:
+    uses: ./.github/workflows/build-and-test.yml
+    secrets: inherit
+
+  uploadartifacts:
+    name: Archive production artifacts
     runs-on: ubuntu-latest
+    needs: buildtestanalyze
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: Build with Gradle
-        run: chmod +x ./gradlew && ./gradlew build
-
-      - name: Archive production artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: app
@@ -33,21 +28,20 @@ jobs:
 
   dokka:
     runs-on: ubuntu-latest
-    needs: build
+    needs: buildtestanalyze
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: gradle
-
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
       - name: Run Dokka with Gradle
-        run: chmod +x ./gradlew && ./gradlew dokkaHtmlMultiModule
-
+        run: ./gradlew dokkaHtmlMultiModule
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
