--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  buildtestanalyze:
-    uses: ./.github/workflows/build-and-test.yml
+  buildtestandanalyze:
+    uses: ./.github/workflows/build-test-analyze.yml
     secrets: inherit
 
   uploadartifacts:
     name: Archive production artifacts
     runs-on: ubuntu-latest
-    needs: buildtestanalyze
+    needs: buildtestandanalyze
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
@@ -28,7 +28,7 @@ jobs:
 
   dokka:
     runs-on: ubuntu-latest
-    needs: buildtestanalyze
+    needs: buildtestandanalyze
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.0
